--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "SearchSelect",
-    "description": "Highlight text and perform semantic search",
+    "name": "Selection Search",
+    "description": "Search semantically related content to your text highlight.",
     "version": "1.0",
     "background": {
         "service_worker": "background.js"
